# peril

./: .gitignore  CMakeLists.txt  README.md  file.cpp  file.h  go.mod  go.sum  main.cpp  main.go  server.cpp  server.h
server/: api.go  config.go  server.go  sse.go  state.go  util.go
ui/: package-lock.json  package.json  webpack.common.js  webpack.dev.js
ui/public/: index.html
ui/src/: index.css  index.js  store.js
ui/src/components/: Adjuster.js  Admin.js  Admin.module.css  App.js  Auth.js  Auth.module.css  Board.js  Board.module.css  BoardAndScore.js  BoardAndScore.module.css  Category.js  Category.module.css  Clue.js  Clue.module.css  Dashboard.js  Dashboard.module.css  Loader.js  Popup.js  Popup.module.css  Scoreboard.js  Scoreboard.module.css  Special.js  Special.module.css  Splash.js  Splash.module.css
ui/src/lib/: audio.js  command.js  events.js
ui/src/reducers/: gameReducer.js  globalReducer.js
ui/src/slices/: globalSlice.js
